# lingmo-assistant

./: .gitignore  CMakeLists.txt  Makefile  README.md
debian/: Dockerfile  changelog  control  copyright  debhelper-build-stamp  rules
resources/: lingmo-ai-assistant.desktop  lingmo-ai-assistant.qrc
resources/qml/: ChatView.qml  MessageBubble.qml  ModelDownloadDialog.qml  ProviderCard.qml  SettingsDialog.qml  SetupWizard.qml  Sidebar.qml  UpdateDialog.qml  main.qml
resources/qml/theme/: M3Colors.qml  M3Fonts.qml  M3Theme.qml  qmldir
scripts/: build-deb-local.sh  build-deb.sh  download-fonts.sh  first-run-wizard.sh  install-deps.sh  setup-llama-cpp.sh  setup-ollama.sh  uninstall.sh
src/: main.cpp
src/core/: ChatController.cpp  ChatController.h  ContextManager.cpp  ContextManager.h  Conversation.cpp  Conversation.h  Message.h  Settings.cpp  Settings.h  SetupController.cpp  SetupController.h  ThemeProvider.cpp  ThemeProvider.h  TokenEstimator.cpp  TokenEstimator.h  TrimmingStrategy.cpp  TrimmingStrategy.h  UpdateManager.cpp  UpdateManager.h
src/models/: HardwareDetector.cpp  HardwareDetector.h  ModelDownloader.cpp  ModelDownloader.h  ModelManager.cpp  ModelManager.h
src/network/: NetworkClient.cpp  NetworkClient.h  StreamParser.cpp  StreamParser.h
src/providers/: AIProvider.h  LlamaCppProvider.cpp  LlamaCppProvider.h  OllamaProvider.cpp  OllamaProvider.h  OpenAICompatProvider.cpp  OpenAICompatProvider.h  ProviderManager.cpp  ProviderManager.h
src/utils/: Logger.cpp  Logger.h  Platform.cpp  Platform.h
